--- a/config.yaml
+++ b/config.yaml
@@ -3,22 +3,22 @@ logging:
   level: INFO
   format: '%(levelname)s:%(name)s:%(message)s'
 
-run_name: 'mcmc_2030'
-network: 'data/networks/elec_s_37_lv1.5__Co2L0p100-3H-solar+p3-dist1_2030.nc'
+run_name: 'mcmc_2040'
+network: 'data/networks/elec_s_37_lv1.5__Co2L0p50-3H-solar+p3-dist1_2040.nc'
 tmpdir: './tmp/'
 
 
 mga_slack: 0.1
 mcmc_variables: 'all' # 'all' selects all 
-co2_budget: 1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
+co2_budget: 815042774.04 #1481895952.8*0.55  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
 conventional_backup: 0.5 # minimum 50% backup capacity from conventional power plants 
 
 
 sampler:
-  chains: 2
-  samples: 11 # has to be a multiple of batch + 1
+  chains: 10
+  samples: 901 # has to be a multiple of batch + 1
   eps: 0.02
-  batch: 5
+  batch: 100
 
 
 solver:
