changes to allow open sweep

--- a/config_2040.yaml
+++ b/config_2040.yaml
@@ -4,21 +4,24 @@ logging:
   format: '%(levelname)s:%(name)s:%(message)s'
 
 run_name: 'mcmc_2040'
-network: 'data/networks/elec_s_37_lv1.5__Co2L0p50-3H-solar+p3-dist1_2040.nc'
+configfile: 'config_2030.yaml'
+network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-solar+p3-dist1_2040.nc'
 tmpdir: './tmp/'
 
 
-mga_slack: 0.1
+mga_slack: 0.2
 mcmc_variables: 'all' # 'all' selects all 
 co2_budget: 333426589.38 #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
 conventional_backup: 0.5 # minimum 50% backup capacity from conventional power plants 
 
+planning_horizons : 2040
+foresight: 'myopic'
 
 sampler:
   chains: 8
   samples: 901 # has to be a multiple of batch + 1
-  eps: 0.02
-  batch: 100
+  eps: 0.2
+  batch: 20
 
 
 solver:
@@ -37,8 +40,7 @@ solver:
     GURO_PAR_BARDENSETHRESH: 200
 
 
-planning_horizons : 2040
-foresight: 'myopic'
+
 
 use_local_co2_constraints: false
 local_emission_constraints: 
@@ -83,11 +85,11 @@ solving:
     formulation: kirchhoff
     clip_p_max_pu: 1.e-2
     load_shedding: false
-    noisy_costs: true
+    noisy_costs: false
 
     min_iterations: 1
     max_iterations: 1
-    nhours: 100
+    #nhours: 100
 
   solver:
     name: gurobi
