--- a/config_2050_o.yaml
+++ b/config_2050_o.yaml
@@ -3,23 +3,24 @@ logging:
   level: INFO
   format: '%(levelname)s:%(name)s:%(message)s'
 
-run_name: 'mcmc_2040_H'
-configfile: 'config_2040_H.yaml'
-network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-H-solar+p3-dist1_2040.nc'
+run_name: 'mcmc_2050_o'
+configfile: 'config_2050_o.yaml'
+network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-solar+p3-dist1_2050.nc'
 tmpdir: './tmp/'
 
-planning_horizons : 2040
+planning_horizons : 2050
 foresight: 'myopic'
 
 mga_slack: 0.2
 mcmc_variables: 'all' # 'all' selects all 
-co2_budget: 496560023.50624996 #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
+co2_budget: 1481895952.8 #1481895952.8*0.55  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
 conventional_backup: 0.5 # minimum 50% backup capacity from conventional power plants 
 
+open_lower: True 
 
 sampler:
   chains: 10
-  samples: 741 # has to be a multiple of batch + 1
+  samples: 601 # has to be a multiple of batch + 1
   eps: 0.2
   batch: 20
 
@@ -83,14 +84,13 @@ solving:
   tmpdir: './tmp/'
   options:
     formulation: kirchhoff
-    keep_shadowprices: true
     clip_p_max_pu: 1.e-2
     load_shedding: false
     noisy_costs: false
 
     min_iterations: 1
     max_iterations: 1
-    #ndays: 40
+    #nhours: 100
 
   solver:
     name: gurobi
