--- a/config_2030_Hf.yaml
+++ b/config_2030_Hf.yaml
@@ -3,25 +3,25 @@ logging:
   level: INFO
   format: '%(levelname)s:%(name)s:%(message)s'
 
-run_name: 'mcmc_2040_H'
-configfile: 'config_2040_H.yaml'
-network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-H-solar+p3-dist1_2040.nc'
+run_name: 'mcmc_2030_Hf'
+configfile: 'config_2030_Hf.yaml'
+network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-H-solar+p3-dist1_2030f.nc'
 tmpdir: './tmp/'
 
-planning_horizons : 2040
+planning_horizons : 2030
 foresight: 'myopic'
 
 mga_slack: 0.2
 mcmc_variables: 'all' # 'all' selects all 
-co2_budget: 496560023.50624996 #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
+co2_budget: 993120047.0124999 #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
 conventional_backup: 0.5 # minimum 50% backup capacity from conventional power plants 
 
 
 sampler:
   chains: 10
-  samples: 741 # has to be a multiple of batch + 1
+  samples: 201 # has to be a multiple of batch + 1
   eps: 0.2
-  batch: 20
+  batch: 5
 
 
 solver:
