--- a/config_2030_o.yaml
+++ b/config_2030_o.yaml
@@ -3,24 +3,24 @@ logging:
   level: INFO
   format: '%(levelname)s:%(name)s:%(message)s'
 
-run_name: 'sweep_H_2030'
-configfile: 'config_H_sweep.yaml'
-network: 'data/networks/elec_s_37_lv1.5__Co2L0p55-3H-H-solar+p3-dist1_2030.nc'
+run_name: 'mcmc_2030_o'
+configfile: 'config_2030_o.yaml'
+network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-solar+p3-dist1_2030.nc'
 tmpdir: './tmp/'
 
 planning_horizons : 2030
-
 foresight: 'myopic'
 
 mga_slack: 0.2
 mcmc_variables: 'all' # 'all' selects all 
-co2_budget: 2206933437.8055553  #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
+co2_budget: 1481895952.8 #1481895952.8*0.55  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
 conventional_backup: 0.5 # minimum 50% backup capacity from conventional power plants 
 
+open_lower: True 
 
 sampler:
   chains: 10
-  samples: 161 # has to be a multiple of batch + 1
+  samples: 601 # has to be a multiple of batch + 1
   eps: 0.2
   batch: 20
 
@@ -39,7 +39,6 @@ solver:
     AggFill: 0
     PreDual: 0
     GURO_PAR_BARDENSETHRESH: 200
-
 
 
 
@@ -84,14 +83,13 @@ solving:
   tmpdir: './tmp/'
   options:
     formulation: kirchhoff
-    keep_shadowprices: true
     clip_p_max_pu: 1.e-2
     load_shedding: false
-    noisy_costs: true
+    noisy_costs: false
 
     min_iterations: 1
     max_iterations: 1
-    #ndays: 40
+    #nhours: 100
 
   solver:
     name: gurobi
