--- a/config_2030f.yaml
+++ b/config_2030f.yaml
@@ -3,25 +3,25 @@ logging:
   level: INFO
   format: '%(levelname)s:%(name)s:%(message)s'
 
-run_name: 'mcmc_2040_H'
-configfile: 'config_2040_H.yaml'
-network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-H-solar+p3-dist1_2040.nc'
+run_name: 'mcmc_2030f'
+configfile: 'config_2030f.yaml'
+network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-solar+p3-dist1_2030f.nc'
 tmpdir: './tmp/'
 
-planning_horizons : 2040
+planning_horizons : 2030
 foresight: 'myopic'
 
 mga_slack: 0.2
 mcmc_variables: 'all' # 'all' selects all 
-co2_budget: 496560023.50624996 #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
+co2_budget: 666853178.76 #1481895952.8*0.55  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
 conventional_backup: 0.5 # minimum 50% backup capacity from conventional power plants 
 
 
 sampler:
-  chains: 10
-  samples: 741 # has to be a multiple of batch + 1
+  chains: 8
+  samples: 201 # has to be a multiple of batch + 1
   eps: 0.2
-  batch: 20
+  batch: 5
 
 
 solver:
@@ -38,7 +38,6 @@ solver:
     AggFill: 0
     PreDual: 0
     GURO_PAR_BARDENSETHRESH: 200
-
 
 
 
@@ -83,14 +82,13 @@ solving:
   tmpdir: './tmp/'
   options:
     formulation: kirchhoff
-    keep_shadowprices: true
     clip_p_max_pu: 1.e-2
     load_shedding: false
     noisy_costs: false
 
     min_iterations: 1
     max_iterations: 1
-    #ndays: 40
+    #nhours: 100
 
   solver:
     name: gurobi
