--- a/config_sweep_e_2030.yaml
+++ b/config_sweep_e_2030.yaml
@@ -3,23 +3,24 @@ logging:
   level: INFO
   format: '%(levelname)s:%(name)s:%(message)s'
 
-run_name: 'mcmc_2040_H'
-configfile: 'config_2040_H.yaml'
-network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-H-solar+p3-dist1_2040.nc'
+run_name: 'sweep_e_2030'
+configfile: 'config_H_sweep.yaml'
+network: 'data/networks/elec_s_37_lv2.5__Co2L0p55-3H-solar+p3-dist1_2030.nc'
 tmpdir: './tmp/'
 
-planning_horizons : 2040
+planning_horizons : 2030
+
 foresight: 'myopic'
 
 mga_slack: 0.2
 mcmc_variables: 'all' # 'all' selects all 
-co2_budget: 496560023.50624996 #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
+co2_budget: 2206933437.8055553  #1481895952.8  #CO2 budget from pypsa-eur-sec for elelctricity only  #38750000 
 conventional_backup: 0.5 # minimum 50% backup capacity from conventional power plants 
 
 
 sampler:
   chains: 10
-  samples: 741 # has to be a multiple of batch + 1
+  samples: 161 # has to be a multiple of batch + 1
   eps: 0.2
   batch: 20
 
@@ -86,7 +87,7 @@ solving:
     keep_shadowprices: true
     clip_p_max_pu: 1.e-2
     load_shedding: false
-    noisy_costs: false
+    noisy_costs: true
 
     min_iterations: 1
     max_iterations: 1
